--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -92,6 +92,7 @@
           <button id="addToCart" data-id="productId">Add to Cart</button>
         </div>
       </section> -->
+      <section class="product-detail"></section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
