products dynamically added

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/main.js" type="module"></script>
   </head>
-
   <body>
     <header id="main-header"></header>
     <main class="divider">
@@ -23,16 +22,36 @@
         </div>
         <div class="mission">
           <p>
-            
             Our mission is to provide you with everything you need to sleep
             outside comfortably at an affordable price.
           </p>
         </div>
       </div>
-      <section class="products">
+      <section class="categories">
+        <h2>Shop by Category</h2>
+        <div class="category-grid">
+          <a href="product_listing/index.html?category=tents">
+            <img src="images/tents.svg" alt="Tents" />
+            <p>Tents</p>
+          </a>
+          <a href="product_listing/index.html?category=backpacks">
+            <img src="images/backpacks.svg" alt="Backpacks" />
+            <p>Backpacks</p>
+          </a>
+          <a href="product_listing/index.html?category=sleeping-bags">
+            <img src="images/sleeping-bags.svg" alt="Sleeping Bags" />
+            <p>Sleeping Bags</p>
+          </a>
+          <a href="product_listing/index.html?category=hammocks">
+            <img src="images/hammocks.svg" alt="Hammocks" />
+            <p>Hammocks</p>
+          </a>
+        </div>
+      </section>
+      <!--section class="products">
         <h2>Top Products</h2>
         <ul class="product-list">
-          <!-- <li class="product-card">
+          < <li class="product-card">
             <a href="product_pages/?product=880RR">
               <img
                 src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
@@ -75,9 +94,9 @@
               <h2 class="card__name">Rimrock Tent - 2-Person, 3-Season</h2>
               <p class="product-card__price">$69.99</p>
             </a>
-          </li> -->
+          </li> 
         </ul>
-      </section>
+      </section>-->
     </main>
     <footer id="main-footer"></footer>
   </body>
