--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -57,6 +57,6 @@
       <section class="product-detail"></section>
     </main>
     <footer id="main-footer"></footer>
-    <script type="module" src="../js/productDetails.js"></script>
+    <script type="module" src="../js/ProductDetails.mjs"></script>
   </body>
 </html>
