--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -14,13 +14,14 @@
   </head>
 
   <body>
-    <header class="divid" id="header"></header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
 
-        <ul class="product-list"></ul>
+        <ul class="product-list">
+        </ul>
       </section>
       <div class="cart-footer hide">
         <p class="cart-total">Total: $0.00</p>
@@ -28,6 +29,6 @@
       </div>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
