--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,14 +8,11 @@
 
     <title>Sleep Outside | Checkout</title>
 
-    <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/checkout.js" type="module"></script>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <header  id="header">
-     
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
@@ -23,6 +20,6 @@
       </section>
     </main>
 
-    <foote id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
