--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header class="divider" id="header"></header>
+    <header class="divider" id="main-header"></header>
     <main class="divider">
       <div class="hero">
         <img
@@ -28,43 +28,12 @@
           </p>
         </div>
       </div>
-      <section class="categories">
-        <h2>Shop by Category</h2>
-
-        <div class="category-grid">
-          <div class="category-card">
-            <a href="./product-listing/?category=tents">
-              <img src="./images/category-tents.svg" alt="Tents" />
-              <p>Tents</p>
-            </a>
-          </div>
-
-          <div class="category-card">
-            <a href="/product-listing/?category=backpacks">
-              <img src="./images/category-backpacks.svg" alt="Backpacks" />
-              <p>Backpacks</p>
-            </a>
-          </div>
-
-          <div class="category-card">
-            <a href="/product-listing/?category=sleepingbags">
-              <img
-                src="./images/category-sleepingbags.svg"
-                alt="Sleeping Bags"
-              />
-              <p>Sleeping Bags</p>
-            </a>
-          </div>
-
-          <div class="category-card">
-            <a href="/product-listing/?category=hammocks">
-              <img src="./images/category-hammocks.svg" alt="Hammocks" />
-              <p>Hammocks</p>
-            </a>
-          </div>
-        </div>
+      <section class="products">
+        <h2>Top Products</h2>
+        <ul class="product-list">
+        </ul>
       </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
