--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -24,7 +24,7 @@
       </section>
       <div class="cart-footer hide">
         <p class="cart-total">Total: $0.00</p>
-        <a href="checkout.html" class="checkout-button">Checkout</a>
+        <a href="../checkout/index.html" class="checkout-button">Checkout</a>
       </div>
     </main>
 
