--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -1,28 +1,110 @@
 <!doctype html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Sleep Outside | Checkout</title>
-
-    <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/checkout.js" type="module"></script>
+    <title>Checkout</title>
+    <link rel="stylesheet" href="./checkout.css" />
   </head>
-
   <body>
-    <header  id="header">
-     
-    </header>
+    <header id="header"></header>
 
-    <main class="divider">
-      <section class="products">
-        <h2>Review & Place your Order</h2>
+    <main class="checkout-grid">
+      <section>
+        <h2>Checkout</h2>
+
+        <!-- Message Area -->
+        <div id="checkout-message" class="message"></div>
+
+        <form id="checkout-form" novalidate>
+          <fieldset>
+            <legend>Customer Information</legend>
+
+            <label>
+              First Name
+              <input type="text" name="fname" required />
+            </label>
+
+            <label>
+              Last Name
+              <input type="text" name="lname" required />
+            </label>
+
+            <label>
+              Street Address
+              <input type="text" name="street" required />
+            </label>
+
+            <label>
+              City
+              <input type="text" name="city" required />
+            </label>
+
+            <label>
+              State
+              <input type="text" name="state" required />
+            </label>
+
+            <label>
+              Zip Code
+              <input
+                type="text"
+                name="zip"
+                id="zip"
+                required
+                pattern="[0-9]{5}"
+              />
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <legend>Payment Information</legend>
+
+            <label>
+              Credit Card Number
+              <input
+                type="text"
+                name="cardNumber"
+                required
+                pattern="[0-9]{16}"
+              />
+            </label>
+
+            <label>
+              Expiration Date (MM/YY)
+              <input
+                type="text"
+                name="expDate"
+                required
+                pattern="(0[1-9]|1[0-2])\/\d{2}"
+              />
+            </label>
+
+            <label>
+              CVV
+              <input
+                type="text"
+                name="securityCode"
+                required
+                pattern="[0-9]{3}"
+              />
+            </label>
+          </fieldset>
+
+          <button type="submit">Place Order</button>
+        </form>
+      </section>
+
+      <section class="order-summary">
+        <h2>Order Summary</h2>
+        <p>Subtotal: <span id="subtotal">$0.00</span></p>
+        <p>Tax: <span id="tax">$0.00</span></p>
+        <p>Shipping: <span id="shipping">$0.00</span></p>
+        <p>Total: <span id="total">$0.00</span></p>
       </section>
     </main>
 
-    <foote id="footer"></footer>
+    <script type="module" src="../js/checkout.js"></script>
+
+    <footer id="footer"></footer>
   </body>
 </html>
