Apply updates to main

--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -27,6 +27,9 @@
           </p>
         </div>
       </div>
+      <div>
+        <input type="search" id="category-search" placeholder="Search in this category..." />
+      </div>
       <section class="products">
         <h2 class="category"></h2>
 
